kubernetes/django-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: ClusterIP
  selector:
    project: django-app
  ports:
    - name: django-app-listener
      protocol: TCP
      port: 80
      targetPort: 80
